ci, cd 돌아가도록 수정 (#513)